# RayTracer

./: .gitignore  LICENSE  README.md  ray-tracer.cabal
src/: Camera.hs  Colors.hs  Hittable.hs  Image.hs  Main.hs  Ray.hs  Samplings.hs  Scenes.hs  Utils.hs  Vec.hs
