cabal-version:       >=1.10

name:                ray-tracer
version:             0.0.0.1
license:             MIT
license-file:        LICENSE
author:              Kshitij Sharma
maintainer:          s2155899@ed.ac.uk
build-type:          Simple

executable ray-tracer
  main-is:             Main.hs
  other-modules:       Image
                       Colors
                       Vec
                       Utils
                       Ray
                       Hittable
                       Camera
                       Samplings
                       Scenes
  build-depends:       base,
                       random >=1.2,
                       numeric-limits >= 0.1.0,
                       directory >= 1.3,
                       array >= 0.5,
                       time >= 1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
